[gd_scene load_steps=6 format=3 uid="uid://cq1ndg7vj4jt2"]

[ext_resource type="Script" uid="uid://dqrpfflqj2idj" path="res://Scenes/Game/Game.gd" id="1_ln2h6"]
[ext_resource type="Texture2D" uid="uid://c86kqu8iyr41y" path="res://assets/GameBg.png" id="1_rdw05"]
[ext_resource type="PackedScene" uid="uid://blgbbmamfpiaa" path="res://Scenes/Paddle/Paddle.tscn" id="2_gwu2e"]
[ext_resource type="AudioStream" uid="uid://dgrgcy6joq33q" path="res://assets/bgm_action_5.mp3" id="4_ln2h6"]
[ext_resource type="AudioStream" uid="uid://caakfn3v23vru" path="res://assets/spell1_0.wav" id="5_y3kpf"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ln2h6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577, 322)
scale = Vector2(0.65, 0.65)
texture = ExtResource("1_rdw05")

[node name="Paddle" parent="." instance=ExtResource("2_gwu2e")]
position = Vector2(576, 578)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ln2h6")
volume_db = -15.0
autoplay = true

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_y3kpf")
volume_db = -5.0

[node name="ScoreLable" type="Label" parent="."]
offset_left = 24.0
offset_right = 106.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 0.756863, 0, 1)
theme_override_colors/font_shadow_color = Color(0.811765, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.678431, 0, 0.690196, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/paragraph_spacing = 0
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 48
text = "000"

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
